--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,7 +406,7 @@ background-image: url("../Impact-Background-image.jpg");
   display: inline-block;
   margin-top: 20px;
   padding: 16px 42px;
-  background: linear-gradient(135deg, #c9a76b, #b48a3c);
+  background: #001F54;
   color: #ffffff !important;
   border-radius: 50px;
   font-weight: 600;
