--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ background-image: url("../Impact-Background-image.jpg");
 .institutional-impact .section-subtitle {
   max-width: 700px;
   margin: 0 auto 70px;
-  color: #6b7280;
+  color: #5c6b82;
   margin-bottom: 90px;
 }
 
