--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1112,16 +1112,27 @@ font-size: 18px;
 .step-4 { left: 0; top: 50%; transform: translateY(-50%); }
 
 
-.blueprint-wrapper::after {
-  content: "";
+content: "";
   position: absolute;
   width: 420px;
   height: 420px;
   border-radius: 50%;
-  border: 2px solid rgba(44, 123, 229, 0.15);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(40deg);
+
+  border: 3px solid transparent;
+
+  border-image: linear-gradient(
+    90deg,
+    #2bb673,
+    #d4a73f,
+    #2c7be5
+  ) 1;
+
   border-left-color: transparent;
   border-bottom-color: transparent;
-  transform: rotate(45deg);
+
   z-index: 0;
 }
 
