--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1138,12 +1138,15 @@ content: "";
 
 .process-arrow {
   position: absolute;
-  right: 90px;
-  top: 120px;
-  width: 12px;
-  height: 12px;
+  top: 20%;
+  right: 22%;
+
+  width: 14px;
+  height: 14px;
+
   border-top: 3px solid #2c7be5;
   border-right: 3px solid #2c7be5;
+
   transform: rotate(45deg);
 }
 
