--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1123,8 +1123,12 @@ font-size: 18px;
   left: 50%;
   transform: translate(-50%, -50%);
 
-  border: 2px dashed rgba(44, 123, 229, 0.35);
+  border-top: 3px solid #2bb673;
+  border-right: 3px solid #d4a73f;
+  border-bottom: 3px solid #2c7be5;
+  border-left: 3px solid #2bb673;
 
+  opacity: 0.4;
   z-index: 0;
 }
 
