--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1042,8 +1042,8 @@ font-size: 18px;
 /* Layout wrapper */
 .blueprint-wrapper {
   position: relative;
-  width: 600px;
-  height: 600px;   /* force square */
+  max-width: 900px;
+  margin: 100px auto;
   min-height: 600px;
 }
 
@@ -1116,10 +1116,9 @@ font-size: 18px;
 
 .process-arcs {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 0;
   pointer-events: none;
 }
