--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1102,6 +1102,12 @@ font-size: 18px;
 }
 
 /* Brand Colored Numbers */
+.step-1 span { color: #2bb673; font-weight: 700; }
+.step-2 span { color: #d4a73f; font-weight: 700; }
+.step-3 span { color: #2c7be5; font-weight: 700; }
+.step-4 span { color: #2bb673; font-weight: 700; }
+
+/* Spacing Adjustments */
 .step-1 {
   top: calc(50% - 210px);  /* 210px above center */
   left: 50%;
@@ -1122,12 +1128,6 @@ font-size: 18px;
   left: calc(50% - 210px); /* 210px left of center */
 }
 
-
-/* Spacing Adjustments */
-.step-1 { top: -40px; left: 50%; transform: translateX(-50%); }
-.step-2 { right: 0; top: 50%; transform: translateY(-50%); }
-.step-3 { bottom: -40px; left: 50%; transform: translateX(-50%); }
-.step-4 { left: 0; top: 50%; transform: translateY(-50%); }
 
 
 
