--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1108,25 +1108,25 @@ font-size: 18px;
 .step-4 span { color: #2bb673; font-weight: 700; }
 
 /* Spacing Adjustments */
-.step-1  { top: calc(50% - 220px);  /* 220px above center */
+.step-1 {
+  top: calc(50% - 280px);
   left: 50%;
 }
+
 .step-2 {
   top: 50%;
-  left: calc(50% + 220px); /* 220px right of center */
+  left: calc(50% + 280px);
 }
 
 .step-3 {
-  top: calc(50% + 220px);  /* 220px below center */
+  top: calc(50% + 280px);
   left: 50%;
 }
 
 .step-4 {
   top: 50%;
-  left: calc(50% - 220px); /* 220px left of center */
+  left: calc(50% - 280px);
 }
-
-
 
 
 .process-arcs {
